# APITest

./: .env.example  .gitignore  README.md  docker-compose.yml  docs_notion.md  init.sql  main.py  pyproject.toml  require.md  requirements.txt
.claude/: settings.local.json
api/: app.py  deps.py
api/routes/: _common.py  law_text.py  precedent.py  small_loan.py  welfare_central.py  welfare_local.py
api/schemas/: requests.py  responses.py
collectors/: base.py
collectors/law_text/: collector.py
collectors/precedent/: collector.py
collectors/small_loan/: collector.py
collectors/welfare/: central_collector.py  collector.py  local_collector.py
config/: settings.py
db/: connection.py  items.py  schema.py
docs/: DESIGN.md
services/: discovery.py  sync.py  targeting.py
